clusters/calops/namespaces/elk/resources/es-kibana.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: es-kibana
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elk-es
      - name: kibana
        image: kibana
        ports:
        - containerPort: 5601
      volumes:
      - name: elk-es
        persistentVolumeClaim:
          claimName: elk-es
---
apiVersion: v1
kind: Service
metadata:
  name: es-kibana
spec:
  ports:
  - name: es
    port: 9200
    protocol: TCP
  - name: kibana
    port: 5601
    protocol: TCP
  selector:
    app: es-kibana
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: 'Authentication Required - Kibana'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: kibana
spec:
  rules:
  - host: jumbotron.a.darkcubed.net
    http:
      paths:
      - backend:
          serviceName: es-kibana
          servicePort: 5601
  tls:
  - hosts:
    - jumbotron.a.darkcubed.net
    secretName: kibana-ingress-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/client-body-buffer-size: 1024k
    kubernetes.io/ingress.class: nginx-internal
  name: es
spec:
  rules:
  - host: es.darkcubed.calops
    http:
      paths:
      - backend:
          serviceName: es-kibana
          servicePort: 9200
